index.css
:root {
  --color-primary: #ff0077;
  --color-secondary: #313131;
  --color-body: #ebebeb;
  --color-paragraph: #6e6e6e;
}
*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

h5,
h3 {
  color: var(--color-primary);
  letter-spacing: 2px;
}
P {
  color: var(--color-paragraph);
  font-family: "Lora", serif;
}
/* Components */
.btn {
  border: 3px solid #5f5f5f;
  padding: 1.5rem 2.5rem;
  white-space: nowrap;
  transition: border 0.5s ease-out;
}

.btn:hover {
  border: 3px solid var(--color-primary);
}
html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}
body {
  font-family: "Poppins", sans-serif;
  font-size: 2.4rem;
  color: var(--color-body);
}

.container {
  width: 100%;

  min-height: 100vh;
  padding: 0 8%;
  background-color: #111025;
}

/* Home section */
#home {
  width: 100%;
  display: flex;
  flex-direction: column;
}
/* Navbar */

.fa-bars {
  width: 2.5rem;
  cursor: pointer;
  padding: 1.5rem 0;
  color: var(--color-primary);
}
.logo {
  margin: 1rem 2rem;
  font-size: 2.3rem;
  letter-spacing: 5px;
}
#home {
  position: fixed;
  z-index: 1;
}
.hamburger,
nav {
  display: flex;
  background: black;
  width: 200px;
  max-width: 100%;
  padding-left: 2rem;
}
nav {
  display: none;
  height: 200px;
}
nav ul li {
  list-style: none;
}
nav ul li a {
  text-decoration: none;
  color: white;
  font-size: 1.5rem;
  transition: margin 0.5s;
}
nav ul li a:hover {
  color: var(--color-primary);
  margin-left: 10px;
}

/* */

/* Intro*/
#intro {
  align-items: center;
  display: flex;
  flex-direction: column;
  min-height: 90vh;
  justify-content: space-between;
  text-align: center;
}
.intro-body {
  margin: auto;
}
.intro-body a {
  text-decoration: none;
  font-size: 1.3rem;
  letter-spacing: 3px;
  color: white;
  font-weight: 600;
}

.intro-body h1 {
  margin-top: 1rem;
  line-height: 4rem;
}
.icons {
  padding: 2rem 0;
}
.icons a {
  color: white;
  padding: 0 1.5rem;
  font-size: 2.5rem;
  transition: color 0.6s;
}
.icons a:hover {
  color: var(--color-primary);
}
.icons ul {
  display: flex;
  list-style: none;
  width: 100%;
  text-align: center;
}
.intro-position {
  margin: 2rem 0 4rem 0;
  font-size: 1.3rem;
  font-family: "Lora", serif;
  letter-spacing: 3px;
  line-height: 2.5rem;
  color: white;
}

@media screen and (min-width: 600px) {
  .intro-position .front::before,
  .intro-position span::after {
    content: " | ";
  }
  .intro-body h1 {
    font-size: 6.7rem;
    line-height: 6rem;
  }
}
@media screen and (min-width: 768px) {
  .intro-body h1 {
    font-size: 7rem;
    line-height: 6rem;
  }
  .intro-body a {
    margin-top: 2rem;
    font-size: 1.5rem;
  }
  .intro-position {
    font-size: 1.5rem;
  }
  .icons a {
    font-size: 3.2rem;
    padding-top: 0 2rem;
  }
}
@media screen and (min-width: 992px) {
}
@media screen and (min-width: 1200px) {
}

/* About me section */

#about {
  padding: 11.2rem 5%;
  background: #fff;
}
.about-me {
  text-align: center;
}
.about-me h1 {
  color: var(--color-secondary);
  font-weight: 600;
  font-size: 2.2rem;
  font-weight: 600;
  line-height: 2.5rem;
}
.about-me h5 {
  font-size: 1.4rem;
}
.about-img {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.about-img img {
  width: 100px;
  height: 102px;
  border-radius: 50%;
  margin: 3rem 0;
}
.about-img p {
  font-size: 1.6rem;
  text-align: center;
  line-height: 1.8;
}

.profile p {
  margin-left: 0 !important;
  text-align: center;
  font-size: 1.6rem;
  line-height: 1.8;
}

.about-profile ul {
  list-style: none;
}
.about-profile strong {
  color: var(--color-secondary);
  font-size: 1.4rem;
  letter-spacing: 1px;
}
.about-profile span {
  color: #888;
  font-size: 1.4rem;
}
#about h3 {
  text-align: center;
  font-size: 2rem;
  margin: 3rem 0;
  color: var(--color-secondary);
}
.intro-list {
  margin-top: 2rem;
}
.box-icons {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
.box-icons .boxes {
  width: 120px;
  height: 120px;
  margin: 0.5rem 0.5rem;
  background: #fff;
  border-radius: 10px;
  box-shadow: 4px 6px 5px -1px rgba(0, 0, 0, 0.25);
  transition: transform 0.4s;
  display: flex;
  justify-content: center;
  align-items: center;
}
.box-icons .boxes:hover {
  transform: scale(1.4) translate(1px);
}

.about-btn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-top: 8rem;
}
.about-btn a {
  font-size: 1.5rem;
  letter-spacing: 2px;
}
.btns {
  font-size: 1.8rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 1rem 4rem;
  border: 0;
  text-align: center;
  white-space: nowrap;
  margin: 1rem auto;
  cursor: pointer;
}
.btn--outline {
  border: 3px solid var(--color-secondary);
  color: var(--color-secondary);
  transition: border 0.5s ease-out;
}
.btn--outline:hover {
  border: 3px solid var(--color-primary);
}
.btn--secondary {
  background: var(--color-secondary);
  color: white;
}
.btns--block {
  width: 100%;
  max-width: 100%;
  display: inline-block;
}
@media screen and (min-width: 600px) {
  .about-profile strong {
    font-size: 1.6rem;
  }
  .about-me h1 {
    font-size: 3.6rem;
  }
  .about-me h5 {
    font-size: 1.6rem;
    margin-bottom: 2rem;
  }
  .about-me {
    text-align: center;
  }
  .about-img {
    margin-top: 4rem;
    flex-direction: row;
  }

  .about-img p,
  .about-profile p {
    text-align: left;
    font-size: 1.9rem;
    margin-left: 2rem;
  }
  .about-header {
    max-width: 1000px;
    margin: auto;
  }

  .about-profile h3 {
    text-align: center;
    font-size: 1.8rem;
  }
  .box-icons {
    margin: auto;
    width: 80%;
  }
}
@media only screen and (min-width: 578px) and (max-width: 619px) {
  .box-icons {
    width: 99%;
    margin: auto;
  }
}
/* ... */

